atualização na documentação de usuário
